Fix wide tracked text that caused overflow

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -163,10 +163,9 @@
         h2 {
             font-family: 'Space Mono', 'Fira Code', monospace;
             font-size: 1.2em;
-            font-weight: 600;
             margin: 0;
             text-transform: uppercase;
-            letter-spacing: 1em;
+            letter-spacing: 0.25rem;
             font-weight: normal;
             color: var(--heading-color);
             text-align: center;
