chore: update copyright year

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1841,7 +1841,7 @@
         <div class="section">
             <div id="footer-layout">
                 <p>
-                &copy; 2024 Accelerant Limited. All rights reserved.<br><br> Design and Development by
+                &copy; 2024-2025 Accelerant Limited. All rights reserved.<br><br> Design and Development by
                 <a href="https://underscorefunk.com">Underscorefunk Design</a>.<br> Icons provided by
                 <a href="https://iconmonstr.com">Iconmonstr</a>. </p>
             </div>
