--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -123,7 +123,7 @@
         html {
             color: var(--text-color);
             line-height: 1.5;
-            font-size: 20px;
+            font-size: clamp(13px, 4vw, 20px);
             background-color: var(--background-color);
             font-family: "Fira Code", monospace;
             font-optical-sizing: auto;
@@ -136,7 +136,7 @@
             scrollbar-width: var(--spacing-content);
             scrollbar-color: var(--framework-color) transparent;
             min-height: 100vh;
-            min-width: 400px;
+
             text-shadow: 2px 0 8px var(--brand-color-light-ghost);
             box-shadow: 2px 0 8px var(--brand-color-light-ghost);
         }
