--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1882,7 +1882,7 @@
     <div class="left-top">
         <ul class="navigation-icons">
             <li>
-                <a href="">
+                <a href="#intro">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 186.27 317.17" style="enable-background:new 0 0 186.27 317.17;" xml:space="preserve">
 <g>
 	<path d="M158.32,28.04h-32.09v59.09c0,17.39-7.94,26-22.76,28.48v25.79c34.11-2.63,54.85-19.03,54.85-50.76V69.6h20.31v239.93H7.64
@@ -1935,27 +1935,13 @@
                     <label>Rust Forge 2025</label> </a>
             </li>
             <li>
-                <a href="#mission">
+                <a href="#support">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path d="M18 1l-6 4-6-4-6 5v7l12 10 12-10v-7z"/>
                     </svg>
-                    <label>Mission</label> </a>
+                    <label>Support</label> </a>
             </li>
 
-            <li>
-                <a href="#location">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/>
-                    </svg>
-                    <label>Location</label> </a>
-            </li>
-            <li>
-                <a href="#bottom-cta">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                        <path d="M20 24h-20v-22h3c1.229 0 2.18-1.084 3-2h8c.82.916 1.771 2 3 2h3v9h-2v-7h-4l-2 2h-3.898l-2.102-2h-4v18h16v-5h2v7zm-10-4h-6v-1h6v1zm0-2h-6v-1h6v1zm6-5h8v2h-8v3l-5-4 5-4v3zm-6 3h-6v-1h6v1zm0-2h-6v-1h6v1zm0-2h-6v-1h6v1zm0-2h-6v-1h6v1zm-1-7c0 .552.448 1 1 1s1-.448 1-1-.448-1-1-1-1 .448-1 1z"/>
-                    </svg>
-                    <label>Sign-up</label> </a>
-            </li>
 
         </ul>
     </div>
