fix: file format declaration

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -84,7 +84,7 @@
             font-family: "Space Mono";
             src: url("assets/fonts/SpaceMono/SpaceMono-BoldItalic.woff2") format("woff2"),
             url("assets/fonts/SpaceMono/SpaceMono-BoldItalic.woff") format("woff"),
-            url("assets/fonts/SpaceMono/SpaceMono-BoldItalic.tff") format("woff"),
+            url("assets/fonts/SpaceMono/SpaceMono-BoldItalic.tff") format("tff"),
         ;
             font-weight: 700;
             font-style: italic;
