Add Roc Grotesk Wide Bold definition

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -90,6 +90,16 @@
             font-style: italic;
         }
 
+        @font-face {
+            font-family: "Roc Grotesk Wide Bold";
+            src: url("assets/fonts/RocGrotesk/RocGrotesk-WideBold.woff2") format("woff2"),
+            url("assets/fonts/RocGrotesk/RocGrotesk-WideBold.woff") format("woff"),
+            url("assets/fonts/RocGrotesk/RocGrotesk-WideBold.tff") format("woff"),
+        ;
+            font-weight: 700;
+            font-style: bold;
+        }
+
         :root {
             --brand-color-dark: #06252f;
             --brand-color-light: rgba(26, 183, 143, 1);
