--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1152,8 +1152,8 @@
                     <h3>Join the Discord server</h3>
                     <p><a href="https://discord.gg/fwd8tGC4Ya">Chat with people</a> from around the world.</p>
                 </div>
-                
-                <div class="form-box">
+
+                <!-- <div class="form-box">
                     <h3>Join mailing list</h2>
                     <p>Keep up to date with announcements</p>
                     <form enctype="multipart/form-data" id="form01" method="post2" target="https://hooks.zapier.com/hooks/catch/19805528/263afdp/" data-autofocus="1">
@@ -1186,7 +1186,7 @@
     
                         <input type="hidden" name="id" value="form01">
                     </form>
-                </div>
+                </div> -->
 
             </div>
 
