Add more metadata

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rust Forge Conference | Wellington, New Zealand | August 2025</title>
+    <meta property="og:title" content="Rust Forge 2025" />
+    <meta property="og:url" content="https://www.rustforgeconf.com/" />
+    <meta property="og:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
+    <meta property="og:locale" content="en" />
+    <link rel="canonical" href="https://www.rustforgeconf.com/" />
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Event",
+          "name": "Rust Forge 2025",
+          "description": "Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025.",
+          "startDate": "2025-08-27",
+          "endDate": "2025-08-30",
+          "eventAttendanceMode": "https://schema.org/MixedEventAttendanceMode",
+          "eventStatus": "https://schema.org/EventScheduled",
+          "location": [
+            {
+                "@type": "VirtualLocation",
+                "url": "https://discord.gg/fwd8tGC4Ya"
+            },
+            {
+                "@type": "Place",
+                "name": "Shed 6",
+                "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "4 Queens Wharf",
+                "addressLocality": "Wellington Central",
+                "postalCode": "5011",
+                "addressRegion": "Wellington",
+                "addressCountry": "New Zealand"
+                }
+            }
+          ],
+          "offers": [
+            {
+               "@type": "Offer",
+               "price": 225,
+               "priceCurrency": "USD",
+               "availability": "https://schema.org/InStock",
+               "url": "https://rust-forge-2025.lilregie.com"
+            }
+          ]
+          "organizer": {
+            "@type": "Organization",
+            "name": "Accelerant Limited",
+            "url": "https://accelerant.dev"
+          }
+        }
+        </script>
+
     <style>
         @font-face {
             font-family: 'Fira Code';
