--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -21,7 +21,7 @@
           "@type": "Event",
           "name": "Rust Forge 2025",
           "description": "Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025.",
-          "image": "https://www.rustforgeconf.com/assets/rust-forge-conference-2025-1000x500.png"
+          "image": "https://www.rustforgeconf.com/assets/rust-forge-conference-2025-1000x500.png",
           "startDate": "2025-08-27",
           "endDate": "2025-08-30",
           "eventAttendanceMode": "https://schema.org/MixedEventAttendanceMode",
