--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://www.rustforgeconf.com/" />
     <meta property="og:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
     <meta property="og:locale" content="en" />
+    <meta name="og:image" content="assets/rust-forge-conference-2025-1000x500.png" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@rustforgeconf">
     <meta name="twitter:title" content="Rust Forge 2025" />
