--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -7,14 +7,12 @@
     <title>Rust Forge Conference | Wellington, New Zealand | August 2025</title>
     <meta property="og:title" content="Rust Forge 2025" />
     <meta property="og:url" content="https://www.rustforgeconf.com/" />
-    <meta property="og:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
+    <meta property="og:description" name="twitter:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
     <meta property="og:locale" content="en" />
-    <meta name="og:image" content="assets/rust-forge-conference-2025-1000x500.png" />
+    <meta property="og:image" name="twitter:image" content="assets/rust-forge-conference-2025-1000x500.png" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@rustforgeconf">
     <meta name="twitter:title" content="Rust Forge 2025" />
-    <meta name="twitter:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
-    <meta name="twitter:image" content="assets/rust-forge-conference-2025-1000x500.png" />
     <link rel="canonical" href="https://www.rustforgeconf.com/" />
     <script type="application/ld+json">
         {
