tweak event desc

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -7,7 +7,7 @@
     <title>Rust Forge Conference | Wellington, New Zealand | August 2025</title>
     <meta property="og:title" content="Rust Forge 2025" />
     <meta property="og:url" content="https://www.rustforgeconf.com/" />
-    <meta property="og:description" name="twitter:description" content="Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
+    <meta property="og:description" name="twitter:description" content="A tech conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
     <meta property="og:locale" content="en" />
     <meta property="og:image" name="twitter:image" content="assets/rust-forge-conference-2025-1000x500.png" />
     <meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
           "@context": "https://schema.org",
           "@type": "Event",
           "name": "Rust Forge 2025",
-          "description": "Rust Forge 2025 is a conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025.",
+          "description": "A tech conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025.",
           "image": "https://www.rustforgeconf.com/assets/rust-forge-conference-2025-1000x500.png",
           "startDate": "2025-08-27",
           "endDate": "2025-08-30",
