--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://www.rustforgeconf.com/" />
     <meta property="og:description" name="twitter:description" content="A tech conference for developers building with the Rust programming language hosted in Wellington, New Zealand from 27-30th August 2025." />
     <meta property="og:locale" content="en" />
-    <meta property="og:image" name="twitter:image" content="assets/images/rust-forge-conference-2025-1000x500.png" />
+    <meta property="og:image" name="twitter:image" content="https://www.rustforgeconf.com/assets/images/rust-forge-conference-2025-1000x500.png" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@rustforgeconf">
     <meta name="twitter:title" content="Rust Forge 2025" />
