--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" name="twitter:image" content="https://www.rustforgeconf.com/assets/images/rust-forge-conference-2025-1000x500.png" />
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
+    <meta property="fb:app_id" content="61562783053986" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@rustforgeconf">
     <meta name="twitter:title" content="Rust Forge 2025" />
