fix: Finish local currency conversion sentence

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2099,7 +2099,8 @@
                 </p>
                 <p>
                     If you use one of the local payment options, we will convert the
-                    USD amount to the local currency and 
+                    USD amount to the local currency and include the conversion rate
+                    in the body of the invoice.
                 </p>
 
                 <h3>Submitting Content</h3>
