--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -226,7 +226,7 @@
 
         h2 {
             font-family: 'Roc Grotesk Wide Bold', 'Space Mono', 'Fira Code', monospace;
-            font-size: 4rem;
+            font-size: clamp( 0.825rem, 8vw, 5rem);
             margin: 0;
             text-transform: uppercase;
             letter-spacing: -0.05rem;
@@ -250,6 +250,7 @@
 
         h3 {
             font-family: 'Roc Grotesk Wide Bold', 'Space Mono', 'Fira Code', monospace;
+            font-size: clamp( 1.25rem, 3vw, 1.5rem);
             color: var(--heading-color);
             text-transform: uppercase;
             letter-spacing: 0.5pt;
@@ -327,14 +328,14 @@
         strong {
             color: var(--highlight-color);
         }
-
+        .break-text {
+            word-break: break-all;
+        }
         code {
             border: 1px solid var(--brand-color-light-ghost);
             padding: 0.125em 0.325em;
             display: inline-block;
             border-radius: 0.25em;
-
-
         }
 
         details {
@@ -430,7 +431,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-            padding: var(--row-spacing) var(--viewport-gutter);
+            padding: var(--row-spacing) var(--spacing-small) var(--row-spacing) calc(var(--viewport-gutter) +
+            var(--spacing-small));
             max-width: var(--col-width-narrow-screen);
             gap: var(--spacing-default);
         }
@@ -677,24 +679,8 @@
 
 
         @media screen and (max-width:640px ) {
-            .right-gutter {
-                display: none;
-            }
 
-            .col .form-box {
-                text-align: center;
-                width: 50vw;
-            }
 
-            .col h2 {
-                font-size: 28pt;
-                line-height: 115%;
-            }
-
-            .col h3 {
-                font-size: 22pt;
-                line-height: 110%;
-            }
 
             .col li {
                 font-size: 14pt;
@@ -779,8 +765,9 @@
             border: 1px solid var(--brand-color-light);
             box-shadow: 10px 10px 0px var(--brand-color-light);
             width: 100%;
+            box-sizing: border-box;
             margin: 0 auto;
-            max-width: 30rem;
+            max-width: min(100%, 30rem);
             justify-content: center;
             align-items: center;
             display: flex;
@@ -1966,7 +1953,7 @@
             <h2><span class="boost">Sponsorship</span> Levels</h2>
 
             <p id="support-levels__cta">
-            Connect with us to set-up your sponsorship! &lt;<a href="mailto:sponsor@rustforgeconf.com">sponsor@rustforgeconf.com</a>&gt;
+            Connect with us to set-up your sponsorship! &lt;<a class="break-text" href="mailto:sponsor@rustforgeconf.com">sponsor@rustforgeconf.com</a>&gt;
             </p>
 
             <div class="support-levels__layout">
