update forge sponsor perks

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1983,8 +1983,7 @@
                             <li>200 word blurb beside logo on website</li>
                             <li>Dedicated public channel in Discord server</li>
                             <li>Right of first refusal for any branded event opportunities, e.g. evening function, group dinner</li>
-                            <li>30 second pre-roll ad in the planned Rust Forge podcast for speaker interviews for the 2025 season</li>
-                            <li>20 minute speaking slot at the conference</li>
+                            <li>30 second pre-roll ads in the <a href="https://timclicks.dev/compose-podcast">Compose podcast</a> episodes of interviews Rust Forge 2025 speakers</li>
                         </ul>
                     </div>
                     <div class="support-level__footer">
