remove extra text from sponsors

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2030,11 +2030,10 @@
                                 <li>Custom role in Discord server</li>
                                 <li>1 conference pass (2 total)</li>
                             </ul>
-                            <p style="font-size: small;">Payment options: credit card & SWIFT.</p>
                         </div>
                         <div class="support-level__footer">
                             <div class="support-level__amount">
-                                <a href="#ember-sponsorship-info">$3k USD</a>
+                                $3k USD
                             </div>
                         </div>
                     </div>
@@ -2048,7 +2047,6 @@
                                 <li>Logo or name on website</li>
                                 <li>1 conference pass</li>
                             </ul>
-                            <p>Payment options: credit card.</p>
                         </div>
                         <div class="support-level__footer">
                             <div class="support-level__amount">
