--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -13,8 +13,8 @@
     <meta property="og:image:width" content="1000"/>
     <meta property="og:image:height" content="500"/>
     <meta property="fb:app_id" content="61562783053986"/>
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@rustforgeconf">
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@rustforgeconf"/>
     <meta name="twitter:title" content="Rust Forge 2025"/>
     <link rel="canonical" href="https://www.rustforgeconf.com/"/>
     <script type="application/ld+json">
