Give logo space to breathe

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -409,6 +409,10 @@
             align-items: center;
         }
 
+        .row:has( #intro) {
+            min-height: 100vh;
+        }
+
         .col {
             display: flex;
             flex-direction: column;
