use pre-defined variable

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -201,7 +201,7 @@
         html {
             color: var(--text-color);
             line-height: var(--line-height-regular);
-            font-size: clamp(15px, 4vw, 20px);
+            font-size: var(--font-size-regular);
             background-color: var(--background-color);
             font-family: var(--font-family-body);
             font-optical-sizing: auto;
