relax non-breaking spaces

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1319,7 +1319,7 @@
                     <div id="intro-body">
                         <p class="p-summary">
                         <span class="p-name">Rust Forge 2025</span> is a <span class="p-category">conference</span> for
-                        developers building with the Rust&nbsp;programming&nbsp;language that is being hosted in
+                        developers building with the Rust programming language that is being hosted in
                         <strong> <a href="#location">
                                     <span class="p-location h-hdr">
                                         <span class="p-locality">Wellington</span>,
