Enable deep linking to sections

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1173,13 +1173,13 @@
         /**
          * SECTION > TRAVEL OFFERS
          * -------------------------------------------------------- */
-        #travel-offers {
+        #travel-offers-detail {
             display: grid;
             grid-gap: var(--spacing-default);
         }
 
         @media screen and (min-width: 980px) {
-            #travel-offers {
+            #travel-offers-detail {
                 grid-template-columns: 1fr 1fr;
             }
         }
@@ -1863,13 +1863,13 @@
 
             <h2><span class="boost">Offers</span> for delegates</h2>
 
-            <div>
+            <div id="travel-offers">
                 <h3>Travel Offers</h3>
                 <p>Rust Forge 2025 is delighted to have Cathay Pacific Airways and Qantas as international travel
                 partners.</p>
             </div>
 
-            <div id="travel-offers">
+            <div id="travel-offers-detail">
 
                 <div class="feature-box">
                     <div class="feature-box__body">
@@ -1929,7 +1929,7 @@
 
             </div> <!-- /#travel-offers -->
 
-            <div>
+            <div id="accommodation-offers">
                 <h3>Accommodation Offers</h3>
                 <p>
                     Rather than have a single conference hotel, we have arranged discounts for a suite of options to
@@ -1937,7 +1937,7 @@
                 </p>
             </div>
 
-            <div id="accommodation-offers">
+            <div id="accommodation-offers-detail">
 
                 <div class="feature-box">
                     <div class="feature-box__body">
