--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -1935,9 +1935,79 @@
                     Rather than have a single conference hotel, we have arranged discounts for a suite of options to
                     cater to different preferences and budgets.
                 </p>
+                <p style="margin: var(--spacing-small) auto;">
+                    Notes:
+                </p>
+                <ul class="arrow">
+                    <li>Indicative prices listed below are the results from manually reviewing the rates offered by each 
+                        provider using the available links. The actual rates available to you may differ.</li>
+                    <li><a href="https://www.qualmark.co.nz/">Qualmark</a> <a href="https://www.qualmark.co.nz/how-qualmark-works/sustainable-tourism-business-criteria">
+                        Sustainable Tourism Business Awards</a> were issued in November 2024.</li>
+                </ul>
+
             </div>
 
             <div id="accommodation-offers-detail">
+
+                <div class="feature-box">
+                    <div class="feature-box__body">
+
+                        <h3 class="feature-box__heading">
+                            <strong>Hotel</strong>
+                            <em>
+                                <a href="https://travelodge.com.au/book-accommodation/wellington/hotel-wellington/">Travelodge Hotel Wellington</a>
+                            </em>
+                        </h3>
+
+                        <ul class="plus">
+                            <li>Prices: NZD 165-270/night (indicative)</li>
+                            <li>Distance: 10 minutes' walk from venue (700m / 0.4 miles).</li>
+                            <li>Address: 2/6 Gilmer Terrace, Wellington</li>
+                            <li>Qualmark rating: 4 star</li>
+                            <li>Qualmark sustainability accreditation: Silver</li>
+                            <li>All rooms are equipped with a kitchenette with microwave, fridge, plates, cutlery and kettle.</li>
+                        </ul>
+
+                        <p>Use the <a href="https://reservations.tfehotels.com/?adult=1&arrive=2025-08-24&chain=14687&child=0&config=CORP_SBE&configcode=CORP_SBE&currency=NZD&depart=2025-09-02&hotel=58423&level=hotel&locale=en-US&productcurrency=NZD&promo=RUSTFORGE2025&rooms=1&theme=TRASBE&themecode=TRASBE">dedicated booking portal</a> to access special rates.</p>
+                    </div>
+                    <div class="feature-box__footer">
+                        <div class="feature-box__footer-blocks">
+                            <div class="feature-box__footer-block-shaded">Code: RUSTFORGE2025</div>
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://reservations.tfehotels.com/?adult=1&arrive=2025-08-24&chain=14687&child=0&config=CORP_SBE&configcode=CORP_SBE&currency=NZD&depart=2025-09-02&hotel=58423&level=hotel&locale=en-US&productcurrency=NZD&promo=RUSTFORGE2025&rooms=1&theme=TRASBE&themecode=TRASBE">
+                                Book Travelodge</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-box">
+                    <div class="feature-box__body">
+
+                        <h3 class="feature-box__heading">
+                            <strong>Serviced Apartments</strong>
+                            <em>
+                                <a href="https://www.adinahotels.com/en/apartments/citylife-wellington/">Adina CityLife Wellington</a>
+                            </em>
+                        </h3>
+
+                        <ul class="plus">
+                            <li>Prices: NZD 200-430/night (indicative)</li>
+                            <li>Distance: 10 minutes' walk from venue (700m / 0.4 miles).</li>
+                            <li>Address: 300 Lambton Quay, Wellington</li>
+                            <li>Qualmark rating: 4 star</li>
+                            <li>Qualmark sustainability accreditation: Silver</li>
+                            <li>Most rooms have a full kitchen, washer &amp; dryer.</li>
+                        </ul>
+
+                        <p>Use the <a href="https://reservations.tfehotels.com/?adult=1&arrive=2025-08-24&chain=14687&child=0&config=CORP_SBE&configcode=CORP_SBE&currency=NZD&depart=2025-09-02&hotel=58423&level=hotel&locale=en-US&productcurrency=NZD&promo=RUSTFORGE2025&rooms=1&theme=TRASBE&themecode=TRASBE">dedicated booking portal</a> to access special rates.</p>
+                    </div>
+                    <div class="feature-box__footer">
+                        <div class="feature-box__footer-blocks">
+                            <div class="feature-box__footer-block-shaded">Code: RUSTFORGE2025</div>
+                            <a class="feature-box__footer-block-solid" target="_blank" href="https://reservations.tfehotels.com/?adult=1&arrive=2025-08-24&chain=14687&child=0&config=CORP_SBE&configcode=CORP_SBE&currency=NZD&depart=2025-09-02&hotel=58423&level=hotel&locale=en-US&productcurrency=NZD&promo=RUSTFORGE2025&rooms=1&theme=TRASBE&themecode=TRASBE">
+                                Book Adina CityLife</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="feature-box">
                     <div class="feature-box__body">
@@ -1949,12 +2019,12 @@
                             </em>
                         </h3>
 
-                        <p>4-star hotel overlooking the city and harbour beyond.</p>
-
                         <ul class="plus">
-                            <li>Prices: $$$-$$$$</li>
+                            <li>Prices: 175-260/night (indicative)</li>
                             <li>Distance: 12 minutes' walk from venue (850m / 0.5 miles).</li>
                             <li>Address: 133 The Terrace, Wellington</li>
+                            <li>Qualmark rating: 4 star plus</li>
+                            <li>Qualmark sustainability accreditation: Gold</li>
                         </ul>
 
                         <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
@@ -1980,9 +2050,11 @@
                         <p>3.5-star economy hotel in the city.</p>
 
                         <ul class="plus">
-                            <li>Prices: $$-$$$</li>
+                            <li>Prices: NZD 150-180/night (indicative)</li>
                             <li>Distance: 3 minutes' walk from venue (400m / 0.7 miles).</li>
                             <li>Address: 153 Featherston Street, Wellington</li>
+                            <li>Qualmark rating: 3 star plus</li>
+                            <li>Qualmark sustainability accreditation: Gold</li>
                         </ul>
 
                         <p>Use the <a href="https://accorevents.com/offers/rust-forge-conference-2025">dedicated booking portal</a> to access special rates.</p>
@@ -2005,12 +2077,11 @@
                             </em>
                         </h3>
 
-                        <p>Self-catered hostel with shared and private rooms. Female-only dorm rooms available.</p>
-
                         <ul class="plus">
-                            <li>Prices: $-$$</li>
+                            <li>Prices: 45-190/night (indicative)</li>
                             <li>Distance: 15 minutes' walk from venue (1.1km / 0.7 miles).</li>
                             <li>Address: 292 Wakefield Street, Wellington</li>
+                            <li>Female-only dorm rooms available.</li>
                         </ul>
                     </div>
                     <div class="feature-box__footer">
