fix: center #interested

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -433,6 +433,10 @@
             .col:has(#intro) {
                 padding-top: 0;
             }
+
+            .col:has(#interested) {
+                padding-top: 0;
+            }
         }
 
         .section {
@@ -1249,6 +1253,18 @@
             }
         }
 
+        /**
+          * SECTION > LET'S DO THIS
+          * -------------------------------------------------------- */
+        #interested {
+            padding: 0;
+            min-height: 100vh;
+        }
+
+        #interested .form-box {
+            margin-top: auto;
+            margin-bottom: auto;
+        }
 
         /**
           * SECTION > DETAILS
@@ -2303,6 +2319,7 @@
                 <p>We're also looking for sponsors. Your support makes all the difference, especially during our first
                 year! </p>
                 <p><strong>We&rsquo;re excited to hear from you!</strong></p>
+                <p><strong><a href="mailto:hello@rustforgeconf.com?subject=Considering%20(attending%7Cspeaking%7Cvolunteering)%20at%20Rust%20Forge%202025">&lt;hello@rustforgeconf.com&gt;</a></strong></p>
                 <!-- TODO: fix this form -->
                 <!-- <form enctype="multipart/form-data" id="form02" method="post" target="/sign-up" data-autofocus="1">
 
