Add note about identity disclosure

--- a/www.rustforgeconf.com/index.html
+++ b/www.rustforgeconf.com/index.html
@@ -2242,6 +2242,8 @@
                         <li>Contact the Rust Project's moderation team <a href="mailto:rust-mods@rust-lang.org">rust-mods@rust-lang.org</a>
                         </li>
                     </ul>
+
+                    <p><em>Note:</em> The mod team may be required to disclose your identity in some circumstances.</p>
                 </div>
 
             </div> <!-- /#conduct-blocks -->
